--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
 <body>
     
 <header class="cabeza">
-    <a href="index.html">
-        <img src="/img/Logo-1.png" alt="Logo-1" class="Logo-1">
-    </a>
-
-    <ul class="nav">
-        <li><a href="index.html">inicio</a>
-        </li>
-        <li><a href="/pages/Planes.html">Planes</a>
-        </li>
-        <li><a href="/pages/nosotros.html">nosotros</a>
-        </li>
-        <li><a href="/pages/sedes.html">sedes</a>
-        </li>
-        <li><a href="/pages/contacto.html">contacto</a>
-        </li>
-    </ul>
+    <nav class="nav">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="img/Logo-1.png" alt="Logo-1" width="300" height="200">
+            </a>
+        </div>
+        <ul class="nav">
+            <li><a href="index.html">inicio</a>
+            </li>
+            <li><a href="/pages/Planes.html">Planes</a>
+            </li>
+            <li><a href="/pages/nosotros.html">nosotros</a>
+            </li>
+            <li><a href="/pages/sedes.html">sedes</a>
+            </li>
+            <li><a href="/pages/contacto.html">contacto</a>
+            </li>
+        </ul>
     <hr>
+    </nav>
 </header>
 <hr>
 <div class="banner">
@@ -46,7 +49,7 @@
                         Durante la clase, te encontrarás con un entrenador altamente calificado y apasionado por el CrossFit, quien te guiará a través de un programa diversificado</p>
                 </div>
             </div>
-            <div class="contenedor reverse">
+            <div class="contenedo reverse">
                 <img src="img/boxeo.jpg" alt="boxeo">
                 <div class="contenedor-textos">
                     <h3>clases de boxeeo con el profesor javier de 8 a 10 hs </h3>
