--- a/pages/Planes.html
+++ b/pages/Planes.html
@@ -10,7 +10,7 @@
     <a href="../index.html">
         <img src="/img/Logo-1.png" alt="Logo-1" class="Logo-1">
     </a>
-    <ul class="nav">
+    <ul class="navegacion">
         <li><a href="../index.html">inicio</a>
         </li>
         <li><a href="/pages/Planes.html">Planes</a>
@@ -56,5 +56,19 @@
     <img src="/img/Logo-1.png" alt="Logo-1" class="Logo-1">
     <p>tolos derechos reservados a nitrix gym</p>
 </footer>
+<div class="redes-sociales">
+    <a href="https://api.whatsapp.com/send?phone=5491112345678" target="_blank">
+        <img src="../img/whatsapp-icon.svg" alt="Icono whatsapp" class="icono-redes">
+    </a>
+    <a href="https://api.whatsapp.com/send?phone=5491112345678" target="_blank">
+        <img src="../img/facebook.svg" alt="Icono whatsapp" class="icono-redes">
+    </a>
+    <a href="https://api.whatsapp.com/send?phone=5491112345678" target="_blank">
+        <img src="../img/instagram.svg" alt="Icono whatsapp" class="icono-redes">
+    </a>
+    <a href="https://api.whatsapp.com/send?phone=5491112345678" target="_blank">
+        <img src="../img/tiktok-icon.svg" alt="Icono whatsapp" class="icono-redes">
+    </a>
+</div>
 
 </html> 
