--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="/css/styles.css">
     <title>nosotros</title>
 </head>
+<body>
 <header class="cabeza">
     <a href="../index.html">
         <img src="/img/Logo-1.png" alt="Logo-1" class="Logo-1">
     </a>
-    <ul class="nav">
+    <ul class="navegacion">
         <li><a href="../index.html">inicio</a>
         </li>
         <li><a href="/pages/Planes.html">Planes</a>
@@ -24,6 +25,17 @@
     </ul>
     <hr>
 </header>
+<section>
+    <h2>Mira nuestras mejores fotos</h2>
+
+    <div class="galeria">
+        <img src="../img/iterior-1.jpg" alt="imagen del interior">
+        <img src="../img/interior-2.jpg" alt="imagen del interior">
+        <img src="../img/inerior-3.jpg" alt="imagen del interior">
+        <img src="../img/interior-4.jpg" alt="imagen del interior">
+        <img src="../img/innterior-5.jpg" alt="imagen del interior">
+    </div>
+</section>
 
 <footer class="foot">
     <hr class="hr-inferiror">
@@ -31,7 +43,21 @@
     <p>tolos derechos reservados a nitrix gym</p>
 </footer>
 
-<body>
-    
+
+    <div class="redes-sociales">
+        <a href="https://api.whatsapp.com/send?phone=5491112345678" target="_blank">
+            <img src="../img/whatsapp-icon.svg" alt="Icono whatsapp" class="icono-redes">
+        </a>
+        <a href="https://api.whatsapp.com/send?phone=5491112345678" target="_blank">
+            <img src="../img/facebook.svg" alt="Icono whatsapp" class="icono-redes">
+        </a>
+        <a href="https://api.whatsapp.com/send?phone=5491112345678" target="_blank">
+            <img src="../img/instagram.svg" alt="Icono whatsapp" class="icono-redes">
+        </a>
+        <a href="https://api.whatsapp.com/send?phone=5491112345678" target="_blank">
+            <img src="../img/tiktok-icon.svg" alt="Icono whatsapp" class="icono-redes">
+        </a>
+    </div>
+
 </body>
 </html>
