--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/bootstrap-5.3.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <title>PreEntrega-2Valentin-Mazur</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <title>PreEntrega-3Valentin-Mazur</title>
 </head>
 <body>
     
@@ -49,7 +51,7 @@
                         Durante la clase, te encontrarás con un entrenador altamente calificado y apasionado por el CrossFit, quien te guiará a través de un programa diversificado</p>
                 </div>
             </div>
-            <div class="contenedo reverse">
+            <div class="contenedor reverse">
                 <img src="img/boxeo.jpg" alt="boxeo">
                 <div class="contenedor-textos">
                     <h3>clases de boxeeo con el profesor javier de 8 a 10 hs </h3>
