--- a/pages/Planes.html
+++ b/pages/Planes.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Planes</title>
 </head>
 <header class="cabeza">
@@ -25,27 +27,34 @@
     
     <hr>
 </header>
+
 <section>
-<div class="card-padre">
-    <div class="card">
-        <p>Mes completo</p>
-        <p>Precio: $8.000</p>
-        <p class="descuento">50% de descuento</p>
-        <button>comprar</button>
+    <div class="caja card-padre">
+        <div class="card" style="width: 18rem;">
+            <img src="../img/crossfit.jpg" alt="">
+        <div class="card-body">
+            <h5>Tres veces por semana</h5>
+            <p>Precio: $8.000</p>
+            <button><span>comprar</span></button>
+        </div>
     </div>
-    <div class="card">
-        <p>Tres veces por semana</p>
-        <p>Precio: $4.000</p>
-        <p class="descuento">25% de descuento</p>
-        <button>comprar</button>
+    <div class="card" style="width: 18rem;">
+    <img src="../img/boxeo.jpg" alt="">
+        <div class="card-body">
+            <h5>Dos veces por semana</h5>
+            <p>Precio: $4.000</p>
+            <button><span>comprar</span></button>
+        </div>
     </div>
-    <div class="card">
-        <p>2 veces a la semana</p>
-        <p>Precio: $2.000</p>
-        <p>5% de descuento</p>
-        <button>comprar</button>
+    <div class="card" style="width: 18rem;">
+        <img src="../img/iterior-1.jpg" alt="">
+        <div class="card-body">
+            <h5 style="padding-left: 60px;">Pase libre</h5>
+            <p>Precio: $10.000</p>
+            <button><span>comprar</span></button>
+        </div>
     </div>
-</div>
+    </div>
 </section>
 
 <body>
